# oscar-ballot

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: categories.example.yaml  files.yaml  imdb_metadata.yaml  judge.yaml  voters.yaml
data/: winners.example.yaml  winners.yaml
data/evaluations/: evaluations.example.csv
data/scores/: scores.example.csv
scripts/: plot_predictions.ipynb  run_evaluations.py  run_predictions.py
src/orchestrators/: evaluations.py  predictions.py
src/prompts/: judge.py  voters.py
src/utils/: files.py  llm.py  logger.py
tests/: conftest.py  test_evaluations_orchestrator.py  test_files_utils.py  test_judge_prompt.py  test_llm_utils.py  test_predictions_orchestrator.py
